--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "29.0.2"
+    buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "io.atomofiron.estimoji"
         minSdkVersion 21
@@ -20,9 +20,10 @@ android {
     }
 }
 ext {
-    androidx = "1.1.0"
-    material = "1.0.0"
-    lifecycle = "2.1.0"
+    androidx = "1.3.0"
+    appcompat = "1.1.0"
+    material = "1.1.0"
+    lifecycle = "2.2.0"
     retrofit = "2.6.0"
     constraint = "1.1.3"
 }
@@ -33,7 +34,7 @@ dependencies {
     implementation "androidx.core:core-ktx:$androidx"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle"
-    implementation "androidx.appcompat:appcompat:$androidx"
+    implementation "androidx.appcompat:appcompat:$appcompat"
     implementation "androidx.constraintlayout:constraintlayout:$constraint"
     implementation "com.google.android.material:material:$material"
 
