--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "io.atomofiron.estimoji"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
     }
@@ -18,25 +18,42 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/io.netty.versions.properties'
+        exclude 'META-INF/INDEX.LIST'
+    }
 }
 ext {
     androidx = "1.3.0"
+    coroutines = "1.3.3"
     appcompat = "1.1.0"
     material = "1.1.0"
     lifecycle = "2.2.0"
     retrofit = "2.6.0"
     constraint = "1.1.3"
+    okhttp = "4.2.2"
+    work = "2.3.4"
+    ktor = "1.3.2"
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.core:core-ktx:$androidx"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle"
     implementation "androidx.appcompat:appcompat:$appcompat"
     implementation "androidx.constraintlayout:constraintlayout:$constraint"
     implementation "com.google.android.material:material:$material"
+    implementation "androidx.work:work-runtime-ktx:$work"
+
+    implementation "io.ktor:ktor-server-netty:$ktor"
+    implementation "io.ktor:ktor-websockets:$ktor"
+    implementation "io.ktor:ktor-gson:$ktor"
+    implementation "io.ktor:ktor-client-cio:$ktor"
+    implementation "io.ktor:ktor-client-js:$ktor"
+    implementation "io.ktor:ktor-client-okhttp:$ktor"
 
     implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
     implementation 'com.google.zxing:core:3.4.0'
