--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,10 @@ android {
         exclude 'META-INF/io.netty.versions.properties'
         exclude 'META-INF/INDEX.LIST'
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 ext {
     androidx = "1.3.0"
@@ -34,6 +38,7 @@ ext {
     okhttp = "4.2.2"
     work = "2.3.4"
     ktor = "1.3.2"
+    metrica = "3.13.1"
 }
 
 dependencies {
@@ -47,6 +52,7 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:$constraint"
     implementation "com.google.android.material:material:$material"
     implementation "androidx.work:work-runtime-ktx:$work"
+    implementation "com.yandex.android:mobmetricalib:$metrica"
 
     implementation "io.ktor:ktor-server-netty:$ktor"
     implementation "io.ktor:ktor-websockets:$ktor"
