--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
     <dist:module dist:instant="true" />
 
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -40,6 +41,7 @@
                     />
             </intent-filter>
         </activity>
+        <service android:name=".android.ForegroundService" />
     </application>
 
 </manifest>
